force-app/main/default/objects/CompanyVehicleCheck__c/CompanyVehicleCheck__c.object-meta.xml
<CustomObject>
    <label>社用車チェック</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>社用車チェックNo.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>