force-app/main/default/objects/CompanyVehicleCheck__c/fields/Accident_manual1__c.field-meta.xml
<CustomField>
    <fullName>Accident_manual1__c</fullName>
    <label>使用禁止_事故マニュアル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>