force-app/main/default/objects/CompanyVehicleCheck__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <description>山本</description>
    <formula>TEXT( CompanyVehicle__r.Base__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>拠点</label>
    <type>Text</type>
</CustomField>