force-app/main/default/objects/CompanyVehicleCheck__c/fields/car_wash1__c.field-meta.xml
<CustomField>
    <fullName>car_wash1__c</fullName>
    <label>使用禁止_洗車</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>