force-app/main/default/objects/CompanyVehicleCheck__c/fields/car_wash__c.field-meta.xml
<CustomField>
    <fullName>car_wash__c</fullName>
    <label>洗車</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>