force-app/main/default/objects/CompanyVehicleCheck__c/fields/car_wash_date__c.field-meta.xml
<CustomField>
    <fullName>car_wash_date__c</fullName>
    <description>山本</description>
    <label>洗車日</label>
    <type>Date</type>
</CustomField>