force-app/main/default/objects/CompanyVehicleCheck__c/fields/CheckDate__c.field-meta.xml
<CustomField>
    <fullName>CheckDate__c</fullName>
    <label>チェック日</label>
    <type>Date</type>
</CustomField>