force-app/main/default/objects/CompanyVehicleCheck__c/fields/CheckDate_formula__c.field-meta.xml
<CustomField>
    <fullName>CheckDate_formula__c</fullName>
    <description>山本</description>
    <formula>IF(
    DAY(CheckDate__c) &lt;= 20,
    DATE(YEAR(CheckDate__c), MONTH(CheckDate__c) - 1, DAY(CheckDate__c)),
    CheckDate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>チェック日の計上日を表示</inlineHelpText>
    <label>チェック日（計上）</label>
    <type>Date</type>
</CustomField>