force-app/main/default/objects/CompanyVehicleCheck__c/fields/CompanyVehicle__c.field-meta.xml
<CustomField>
    <fullName>CompanyVehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社用車</label>
    <referenceTo>CompanyVehicle__c</referenceTo>
    <relationshipLabel>社用車チェック</relationshipLabel>
    <relationshipName>CompanyVehicle</relationshipName>
    <type>Lookup</type>
</CustomField>