force-app/main/default/objects/CompanyVehicleCheck__c/fields/Dirt_scratches__c.field-meta.xml
<CustomField>
    <fullName>Dirt_scratches__c</fullName>
    <label>内装の汚れ、キズ</label>
    <type>TextArea</type>
</CustomField>