force-app/main/default/objects/CompanyVehicleCheck__c/fields/Exemption__c.field-meta.xml
<CustomField>
    <fullName>Exemption__c</fullName>
    <label>免除理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>