force-app/main/default/objects/CompanyVehicleCheck__c/fields/Oil_element_replacement__c.field-meta.xml
<CustomField>
    <fullName>Oil_element_replacement__c</fullName>
    <description>山本</description>
    <label>オイル/エレメント交換時期</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>オイル交換済み</fullName>
            </value>
            <value>
                <fullName>エレメント交換済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>