force-app/main/default/objects/CompanyVehicleCheck__c/fields/OtherNotes__c.field-meta.xml
<CustomField>
    <fullName>OtherNotes__c</fullName>
    <label>その他特記事項</label>
    <type>TextArea</type>
</CustomField>