force-app/main/default/objects/CompanyVehicleCheck__c/fields/Room_cleaning1__c.field-meta.xml
<CustomField>
    <fullName>Room_cleaning1__c</fullName>
    <label>使用禁止_室内清掃</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>