force-app/main/default/objects/CompanyVehicleCheck__c/fields/Room_cleaning__c.field-meta.xml
<CustomField>
    <fullName>Room_cleaning__c</fullName>
    <label>室内清掃</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>