force-app/main/default/objects/CompanyVehicleCheck__c/fields/run_dist_replacing__c.field-meta.xml
<CustomField>
    <fullName>run_dist_replacing__c</fullName>
    <label>交換時走行距離</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>