force-app/main/default/objects/CompanyVehicleCheck__c/fields/submission_delay__c.field-meta.xml
<CustomField>
    <fullName>submission_delay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>社用車チェック時に社用車レコードから転記される。山本</description>
    <label>提出遅延</label>
    <type>Checkbox</type>
</CustomField>