force-app/main/default/objects/CompanyVehicleCheck__c/fields/Tire_tread1__c.field-meta.xml
<CustomField>
    <fullName>Tire_tread1__c</fullName>
    <label>使用禁止_タイヤ溝</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>