force-app/main/default/objects/CompanyVehicleCheck__c/fields/tireType__c.field-meta.xml
<CustomField>
    <fullName>tireType__c</fullName>
    <label>タイヤの種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>夏（ノーマルタイヤ）</fullName>
            </value>
            <value>
                <fullName>冬（スタッドレスタイヤ）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>