force-app/main/default/objects/CompanyVehicleCheck__c/fields/WarningTriangle__c.field-meta.xml
<CustomField>
    <fullName>WarningTriangle__c</fullName>
    <description>喜多</description>
    <label>三角表示板</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>