force-app/main/default/objects/CompanyVehicleCheck__c/validationRules/Please_enter_the_mileage_at_time_of_repl.validationRule-meta.xml
<ValidationRule>
    <fullName>Please_enter_the_mileage_at_time_of_repl</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Oil_element_replacement__c )) &amp;&amp;  ISBLANK(run_dist_replacing__c )</errorConditionFormula>
    <errorDisplayField>run_dist_replacing__c</errorDisplayField>
    <errorMessage>オイル/エレメント交換時期にチェックをつける場合は交換時走行距離を入力してください</errorMessage>
</ValidationRule>