force-app/main/default/objects/CompanyVehicleCheck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CompanyVehicle__c</columns>
    <columns>NAME</columns>
    <columns>CheckDate__c</columns>
    <columns>User__c</columns>
    <columns>CarName__c</columns>
    <columns>RegistrationNo__c</columns>
    <columns>run_dist__c</columns>
    <columns>VehicleInspectionCertificate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>