force-app/main/default/objects/CompanyVehicleCheck__c/listViews/View2.listView-meta.xml
<ListView>
    <fullName>View2</fullName>
    <columns>NAME</columns>
    <columns>CheckDate__c</columns>
    <columns>User__c</columns>
    <columns>CompanyVehicle__c</columns>
    <columns>RegistrationNo__c</columns>
    <columns>VehicleInspectionCertificate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VehicleInspectionCertificate__c</field>
        <operation>equals</operation>
        <value>×</value>
    </filters>
    <label>車検証なし</label>
</ListView>